app/assets/stylesheets/sub_styles/board/board_main.scss
.workspace-sidebar {
    height: 100vh;
    width: 5%;
    min-width: 30px;
    overflow: hidden;
    background-color: rgb(247, 247, 247);
}

.workspace-sidebar-container {
    width: 100%;
    height: 100%;
    padding: 15px;
}

#workspace-sidebar-collapse-btn {
    @include workspace-sidebar-collapse-transition;
    position: relative;
    padding: 6px 9px;
    height: 30px;
    width: 30px;
    margin-left: -15px;
    margin-top: 25px;
    border-radius: 100%;
    background-color: white;
    border: 1px solid rgb(218, 218, 218);
    color: black;

    &:hover {
        @include workspace-sidebar-collapse-transition;
        cursor: pointer;
        width: 35px;
        padding-left: 15px;
        border-radius: 30px;
        background-color: rgb(0, 90, 247);
        color: white;
        
    }
}

.workspace-sidebar-collapsed {
    @include workspace-sidebar-collapsed-btn-transition;

    div {
        @include div-visibility-toggle;
        visibility: hidden;
    }
}

.workspace-sidebar-open {
    @include workspace-sidebar-collapsed-btn-transition;
    width: 100%;
    min-width: 200px;
    max-width: 350px;
    border-right: 1px solid lightgray;
    box-shadow: 5px 0px 20px rgba(145, 145, 145, 0.3);

    div {
        @include div-visibility-toggle;
        visibility: visible;
    }
}

#workspace-sidebar-header {
    @include flex;
}

#workspace-name {
    @include flex;
    align-items: center;
    border: 1px solid black;
    border-radius: 3px;
    margin: 12px 0 20px 0;
    padding: 5px;
    font-weight: 700;
    user-select: none;

    p {
        background-color: salmon;
        border-radius: 5px;
        padding: 5px;
        color: white;
        user-select: none;
    }

    h2 {
        width: 100%;
        text-align: center;
    }
}

#add-board-option {
    text-align: left;
    width: 100%;
    border: none;
    border-radius: 5px;
    padding: 10px;
    background-color: transparent;

    &:hover {
        cursor: pointer;
        background-color: rgb(228, 228, 228);
    }
}

#boards-list {
    width: 100%;
    height: 78%;
    overflow-x: hidden;
    overflow-y: scroll;
    margin-top: 10px;
    padding-top: 10px;
    border-top: 1px solid rgb(209, 217, 226);

    button {
        margin: 5px;
        padding: 10px;
        border: none;
        border-radius: 3px;
        background-color: transparent;
        text-decoration: none;
        text-transform: capitalize;
        text-align: left;

        &:hover {
            cursor: pointer;
            background-color: rgb(226, 231, 236);
        }
    }
}

